@@ -34,9 +34,13 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #include "libtorrent/config.hpp"
 
-#if !defined TORRENT_DEBUG || TORRENT_NO_ASSERTS
+#if (!defined TORRENT_DEBUG && !TORRENT_PRODUCTION_ASSERTS) || TORRENT_NO_ASSERTS
 #define TORRENT_ASSERT(a) do {} while(false)
 #else
+
+#if TORRENT_PRODUCTION_ASSERTS
+extern char const* libtorrent_assert_log;
+#endif
 
 #include <string>
 
@@ -44,7 +48,7 @@ POSSIBILITY OF SUCH DAMAGE.
 std::string demangle(char const* name);
 #endif
 
-#if (defined __linux__ || defined __MACH__) && defined __GNUC__ && defined TORRENT_DEBUG
+#if (defined __linux__ || defined __MACH__) && defined __GNUC__
 
 TORRENT_EXPORT void assert_fail(const char* expr, int line, char const* file, char const* function);
 #define TORRENT_ASSERT(x) do { if (x) {} else assert_fail(#x, __LINE__, __FILE__, __PRETTY_FUNCTION__); } while (false)
